--- a/temp.tex
+++ b/temp.tex
@@ -102,26 +102,27 @@
 
 \newpage
 \begin{abstract}
-    Данный документ является образцом оформления дипломной работы для студентов кафедры 
-    Математических методов прогнозирования ВМК~МГУ. 
-    Приведённые ниже рекомендации взяты из~статьи
-    <<Написание отчётов и статей (рекомендации)>>
-    на~вики"~ресурсе \texttt{www.MachineLearning.ru}.
-    Студенты, готовящие дипломную работу к~защите, 
-    могут найти много полезной информации также в~статьях 
-    <<Научно-исследовательская работа (рекомендации)>>,
-    <<Подготовка презентаций (рекомендации)>>,
-    <<Защита выпускной квалификационной работы (рекомендации)>>
-    на~том~же ресурсе. 
+	TODO: Написать аннотацию
+    %Данный документ является образцом оформления дипломной работы для студентов кафедры 
+    %Математических методов прогнозирования ВМК~МГУ. 
+    %Приведённые ниже рекомендации взяты из~статьи
+    %<<Написание отчётов и статей (рекомендации)>>
+    %на~вики"~ресурсе \texttt{www.MachineLearning.ru}.
+    %Студенты, готовящие дипломную работу к~защите, 
+    %могут найти много полезной информации также в~статьях 
+    %<<Научно-исследовательская работа (рекомендации)>>,
+    %<<Подготовка презентаций (рекомендации)>>,
+   % <<Защита выпускной квалификационной работы (рекомендации)>>
+    %на~том~же ресурсе. 
 
-    Аннотация обычно содержит 
-    краткое описание постановки задачи и~полученных результатов,
-    одним абзацем на 10--15 строк.
-    Цель аннотации "--- обозначить в~общих чертах, о~чём работа,
-    чтобы человек, совершенно не~знакомый с~данной работой,
-    понял, интересна~ли ему эта тема, и~стоит~ли читать дальше.
-    Аннотация собирается в~последнюю очередь
-    путем легкой модификации наиболее важных и~удачных фраз из введения и~заключения.
+    %Аннотация обычно содержит 
+    %краткое описание постановки задачи и~полученных результатов,
+    %одним абзацем на 10--15 строк.
+    %Цель аннотации "--- обозначить в~общих чертах, о~чём работа,
+    %чтобы человек, совершенно не~знакомый с~данной работой,
+    %понял, интересна~ли ему эта тема, и~стоит~ли читать дальше.
+    %Аннотация собирается в~последнюю очередь
+    %путем легкой модификации наиболее важных и~удачных фраз из введения и~заключения.
 \end{abstract}
 
 \newpage
@@ -195,7 +196,6 @@
 
 	\subsection{Типы нейрофизиологических сигналов}
 	\par Предполагается, что идеализированный нейрокомпьютерный интерфейс будет напрямую транслировать всякое намерение пользователя и посылать сигнал управляемому устройству о выполнении соответствующего действия. Однако установление однозначного соответствия между намерениями пользователя и нейрофизиологическими сигналами является нетривиальной задачей. На сегодняшний день данный факт является одной из основных причин ограничения свободы действий в существующих системах BCI.
-	\par TODO: Про частоты?
 	\par Для распознавания различных нейрофизиологических сигналов и возможности сопоставления подобного рода сигналов и подразумеваемых действий необходимо осознанное управление активностью головного мозга. В основном для достижения этой цели используются два подхода. При использовании первого подхода испытыемые подвергаются воздействию набора стимулов нейрокомпьютерного интерфейса, и контроль мозговой активности осуществляется путём концентрации на одном конкретном стимуле. Изменения нейрофизиологических сигналов в силу различий между стимулами называются {\it вызванными потенциалами} (англ. {\it event-related potentials, ERPs}). При использовании второго подхода управление мозговой активностью осуществляется путём выполнения определённого когнитивного (ментального) задания, например, представление определённого движения руки может явиться причиной изменения активности в соответствующей части скальпа.\\ \\
 	\par $1^{\circ}.$ {\bf Вызванные потенциалы}
 	\par Вызванный потенциал — электрическая реакция мозга на внешний раздражитель или на выполнение некоторого ментального задания. Потенциалы данного вида имеют место в течение определённого промежутка времени после воздействия стимула.
@@ -230,7 +230,8 @@ $\gamma$-ритм &  30+ \\ \hline
 	\begin{itemize}
 	\item
 	{\bf Сенсомоторные ритмы}
-	\par Колебания $\mu$-ритма могут быть обнаружены в сенсомоторной части скальпа, когда пользователь находится в состоянии покоя. Если же выполняется некоторое фиксированное движение или ментальное представление данного движения, амплитуда колебаний уменьшается. Кроме того, подобные действия также порождают изменения в амплитуде $\beta$-ритма. Изменения данных ритмов отражаются на части скальпа, отвечающей перемещаемой части тела, в связи с этим представляемые и выполняемые движения различных частей тела могут быть отличимы друг от друга. Имеющие место изменения мозговой активности для пользователей с небольшим опытом использования нейрокомпьютерных интерфейсов обычно оказываются недостаточно весомыми для адекватного функционирования распознающих алгоритмов.
+	\par Колебания $\mu$-ритма могут быть обнаружены в сенсомоторной части скальпа, когда пользователь находится в состоянии покоя. Если же выполняется некоторое фиксированное движение или ментальное представление данного движения, амплитуда колебаний уменьшается. Кроме того, подобные действия также порождают изменения в амплитуде $\beta$-ритма. Изменения данных ритмов отражаются на части скальпа, отвечающей перемещаемой части тела, в связи с этим представляемые и выполняемые движения различных частей тела могут быть отличимы друг от друга.
+	\par Имеющие место изменения мозговой активности для пользователей с небольшим опытом использования нейрокомпьютерных интерфейсов обычно оказываются недостаточно весомыми для адекватного функционирования распознающих алгоритмов. Кроме того, используемое в данном исследовании устройство не покрывает часть скальпа, отвечающую за генерацию волн, связанных с подобного рода событиями. В связи с этим в дальнейшем данный подход не будет рассматриваться.
 	\item
 	{\bf Другая активность}
 	\par В качестве триггеров возникновения колебаний потенциалов могут быть использованы когнитивные задания, отличные от представления движений, например, вычисления, слуховые представления, представление движения трёхмерного объекта в пространстве и др.
@@ -454,7 +455,20 @@ $$BR = \frac{d}{n_1 + n_2} * \frac{60}{ISI} * \log_2 (N_{st}),$$
 	\end{itemize}
 
 	\par После изучения материалов по исследуемой тематике и различных видов парадигм, используемых для тестирования применимости разработанных систем управления с использованием нейрокомпьютерных интерфейсов, было принято решение провести две серии эксериментов, использующих различные виды визуальных стимулов. 
-	\par Получение данных производилось следующим образом. Испытуемый располагался лицом к монитору компьютера с устройством {\it Emotiv EPOC}, расположенным на голове. На экране монитора было изображено квадратное поле, разбитое на 100 равных квадратов прямыми, параллельными его сторонам, путём деления каждой стороны на 10 равных отрезков. Каждый из квадратов является возможным положением курсора на экране компьютера. Целью испытуемого являлось управление курсором в виде голубого квадрата, расположенного на экране компьютера, от начального до обозначенного конечного положения. Четыре визуальных стимула выделялись на экране последовательно случайным образом, в каждый момент времени было выделено не более одного визуального стимула. В первой серии экспериментов в качестве визуальных стимулов выступали изображения стрелок, отвечающих четырём возможным направлениям движения курсора (вверх, вниз, влево, вправо); во второй серии экспериментов использовались кнопки с текстом, описывающим одно из указанных направлений движения. Испытуемому требовалось сконцентрировать внимание на стимуле, отвечающем желаемому направлению движения (целевом стимуле с вероятностью появления 25\%), и игнорировать остальные стимулы, отвечающие нежелательным направлениям движения курсора (нецелевые стимулы с вероятностью появления 75\%).
+	\par Получение данных для каждого из двух испытуемых производилось следующим образом. Испытуемый располагался лицом к монитору компьютера с устройством {\it Emotiv EPOC}, расположенным на голове. На экране монитора было изображено квадратное поле, разбитое на 100 равных квадратов прямыми, параллельными его сторонам, путём деления каждой стороны на 10 равных отрезков. Каждый из квадратов является возможным положением курсора на экране компьютера. Целью испытуемого являлось управление курсором в виде голубого квадрата, расположенного на экране компьютера, от начального до обозначенного конечного положения. Четыре визуальных стимула выделялись на экране последовательно случайным образом, в каждый момент времени было выделено не более одного визуального стимула. В первой серии экспериментов в качестве визуальных стимулов выступали изображения стрелок, отвечающих четырём возможным направлениям движения курсора (вверх, вниз, влево, вправо); во второй серии экспериментов использовались кнопки с текстом, описывающим одно из указанных направлений движения. Внешний вид используемого поля и визуальных стимулов в двух сериях экспериментов изображен на рис.~\ref{field}. Испытуемому требовалось сконцентрировать внимание на стимуле, отвечающем желаемому направлению движения (целевом стимуле с вероятностью появления 25\%), и игнорировать остальные стимулы, отвечающие нежелательным направлениям движения курсора (нецелевые стимулы с вероятностью появления 75\%).
+
+\begin{figure}[h!]
+\begin{minipage}[h!]{0.49\linewidth}
+\center{\includegraphics[width=1\linewidth]{stimuli1.png} \\ а)}
+\end{minipage}
+\hfill
+\begin{minipage}[h!]{0.49\linewidth}
+\center{\includegraphics[width=1\linewidth]{stimuli1.png} \\ б)}
+\end{minipage}
+\caption{Поле и визуальные стимулы, изображённые на экране компьютера в процессе проведения серий экспериментов с различными видами стимулов.}
+\label{field}
+\end{figure}
+
 	\par Назовём {\it пробой} последовательность из выделения некоторого визуального стимула в течение 250 мс, а также последующие 1250 мс, необходимые для обработки, классификации данных, генерации команды и выполнения перемещения курсора. Межстимульный интервал при проведении эксперимента равнялся 2500 мс, включая время, необходимое на обработку и классификацию данных. Назовём {\it сессией} последовательность проб, предпринятых для достижения курсором целевого положения.
 	\par Запись ЭЭГ осуществлялась с частотой дискретизации 128 Гц (с внутренней частотой дискретизации устройства 2048 Гц и последующей первичной обработкой) при помощи устройства {\it Emotiv EPOC}. При записи данных устройство находилось в двух различных положениях: положение по умолчанию и инверсированное положение. В положении по умолчанию были использованы данные 10 сенсоров (F3, FC5, T7, P7, O1, O2, P8, T8, FC6, и F4), поскольку данное подмножество обеспечивает покрытие части скальпа, отвечающей за P300-волны. В инверсированном положении были использованы данные 8 сенсоров (FC6, F4, P8, AF4, AF3, F3, P7 и FC5), поскольку они покрывают центральную часть скальпа, которая считается областью, наиболее активно отвечающей за генерацию P300-волн. Положения указанных сенсоров на голове человека изображены на рис.~\ref{position}.
 
@@ -492,6 +506,7 @@ $$BR = \frac{d}{n_1 + n_2} * \frac{60}{ISI} * \log_2 (N_{st}),$$
 	\end{itemize}
 	\par Для схемы с использованием отдельных классификаторов используется аналогичный сценарий, однако число раундов для каждого направления удваивается.
 
+\newpage
 \section{Предлагаемый подход}
 \subsection{Предобработка}
 	\par Перед обучением классификатора данные были подвергнуты предобработке. Последовательность действий, применённых к данным, описана ниже. 
@@ -608,24 +623,25 @@ $$BR = \frac{d}{n_1 + n_2} * \frac{60}{ISI} * \log_2 (N_{st}),$$
 
 \newpage
 \section{Заключение}
-\begin{itemize}
-\item 
-    Предложен новый подход к\dots
-\item 
-    Разработан новый метод\dots, позволяющий\dots
-\item 
-    Доказан ряд теорем, подтверждающих (опровергающих), что\dots
-\item 
-    Проведены вычислительные эксперименты\dots,
-    которые подтвердили / опровергли / привели к~новым постановкам задач.
-\end{itemize}
+TODO: Написать заключение
+%\begin{itemize}
+%\item 
+%    Предложен новый подход к\dots
+%\item 
+%    Разработан новый метод\dots, позволяющий\dots
+%\item 
+%    Доказан ряд теорем, подтверждающих (опровергающих), что\dots
+%\item 
+%    Проведены вычислительные эксперименты\dots,
+%    которые подтвердили / опровергли / привели к~новым постановкам задач.
+%\end{itemize}
     
-Цель данного раздела: доказать квалификацию автора. 
-Даже беглого взгляда на заключение должно быть достаточно, чтобы стало ясно: 
-автору удалось решить актуальную, трудную, ранее не~решённую задачу, 
-предложенные автором решения обоснованы и~проверены.
+%Цель данного раздела: доказать квалификацию автора. 
+%Даже беглого взгляда на заключение должно быть достаточно, чтобы стало ясно: 
+%автору удалось решить актуальную, трудную, ранее не~решённую задачу, 
+%предложенные автором решения обоснованы и~проверены.
 
-Иногда в~Заключении приводится список направлений дальнейших исследований.
+%Иногда в~Заключении приводится список направлений дальнейших исследований.
 
 \newpage
 
@@ -641,48 +657,47 @@ $$BR = \frac{d}{n_1 + n_2} * \frac{60}{ISI} * \log_2 (N_{st}),$$
 
 \bibitem{Farwell_Donchin}
 {\it Farwell L.A. and Donchin E.}
-\newblock "Talking off the top of your head: toward a mental prothesis utilizing event-related brain potentials",
+\newblock "Talking off the top of your head: toward a mental prothesis utilizing event-related brain potentials"
 \newblock Electroencephalography \& Clinical Neurophysiology, (vol. 70, №6, pp. 510-523), 1988.
 
 \bibitem{P300_first}
 {\it Sutton S., Braren M., Zubin J., John E.R.}
-\newblock "Evoked-potential correlates of stimulus uncertainty",
+\newblock <<Evoked-potential correlates of stimulus uncertainty>>,
 \newblock Science. (vol. 150, №700, pp. 1187-1188), 1965.
 
 \bibitem{Cachenoura}
 {\it Amar Kachenoura, Laurent Albera, Lotfi Senhadji, Pierre Comon}
-\newblock "ICA: A Potential Tool for BCI Systems",
+\newblock <<ICA: A Potential Tool for BCI Systems>>,
 \newblock Signal Processing Magazine, IEEE (vol. 25, №1, pp.57-68), 2008.
 
 \bibitem{ensemble}
 {\it Rakotomamonjy, A. and Guigue, V.}
-\newblock "BCI Competition III: Dataset II- Ensemble of SVMs for BCI P300 Speller",
+\newblock <<BCI Competition III: Dataset II- Ensemble of SVMs for BCI P300 Speller>>,
 \newblock Biomedical Engineering, IEEE Transactions (vol. 55, №3, pp. 1147-1154), 2005.
 
 \bibitem{FastICA}
 The FastICA algorithm package for MATLAB.
 \newblock Laboratory of Information and Computer Science, Helsinki University of Technology,
-\newblock (http://research.ics.aalto.fi/ica/fastica/).
+\newblock ({\it http://research.ics.aalto.fi/ica/fastica/}).
 
 \bibitem{Piccione}
 {\it Piccione F., Giorgi F., Tonin P., Priftis K., Giove S., Silvoni S., Palmas G., Beverina F.}
-\newblock  "P300-based brain computer interface: reliability and performance in healthy and paralysed participants",
+\newblock  <<P300-based brain computer interface: reliability and performance in healthy and paralysed participants>>,
 \newblock Clin Neurophysio l(vol. 117, №3б pp. 531-537), 2006.
 
 \bibitem{James}
 {\it S. Wang, C. J. James}
-\newblock "Enhancing evoked responses for BCI through advanced ICA techniques"
+\newblock <<Enhancing evoked responses for BCI through advanced ICA techniques>>,
 \newblock International Conference on Advances in Medical, Signal and Information Processing, pp. 1--4, 2006.
 
 \bibitem{rhyme}
-{\it Juan Manuel Ramírez-Cortes, Vicente Alarcon-Aquino, Gerardo Rosas-Cholula, Pilar Gomez-Gil, Jorge Escamilla-Ambrosio}
-\newblock "P-300 Rhythm Detection Using ANFIS Algorithm and Wavelet Feature Extraction in EEG Signals", 
+{\it Juan Manuel Ramírez-Cortes, Vicente Alarcon-Aquino, Gerardo Rosas-Cholula, Pilar Gomez-Gil, Jorge Escamilla-Ambrosio} 
+\newblock <<P-300 Rhythm Detection Using ANFIS Algorithm and Wavelet Feature Extraction in EEG Signals>>,
 \newblock Proceedings of the World Congress on Engineering and Computer Science (vol. 1,  pp. 963-968), 2010.
-Manuel Ramírez-Cortes, Juan, Vicente Alarcon-Aquino, Gerardo Rosas-Cholula, Pilar Gomez-Gil, and Jorge Escamilla-Ambrosio. "P-300 Rhythm Detection Using ANFIS Algorithm and Wavelet Feature Extraction in EEG Signals." Proceedings of the World Congress on Engineering and Computer Science 2010 (2010). 
 
 \bibitem{Kanoh}
 {\it S. Kanoh, Member, IEEE, K. Miyamoto and T. Yoshinobu}
-\newblock " A P300-based BCI System for Controlling Computer Cursor Movement",
+\newblock <<A P300-based BCI System for Controlling Computer Cursor Movement>>,
 \newblock Conf Proc IEEE Eng Med Biol Soc., 2011.
 \end{thebibliography}
 
